feat:add more tag routes
can get all tags, choosing to include associated seals
can get tag by name
